--- a/src/alog/view/FrmGui.form
+++ b/src/alog/view/FrmGui.form
@@ -187,8 +187,8 @@
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="btnVerificar" min="-2" pref="157" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                              <Component id="btnVerificar" min="-2" pref="178" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="btnProxPerc" min="-2" pref="218" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -204,7 +204,7 @@
                   </Group>
                   <Component id="jScrollPane1" min="-2" pref="311" max="-2" attributes="0"/>
                   <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnSair" alignment="1" min="-2" pref="106" max="-2" attributes="0"/>
+                  <Component id="btnSair" alignment="1" min="-2" pref="116" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -286,9 +286,13 @@
     </Container>
     <Component class="javax.swing.JButton" name="btnProxPerc">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/resources/img/icon-next-arrow-24.png"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Pr&#xf3;ximo passo"/>
         <Property name="actionCommand" type="java.lang.String" value="Pr&#xf3;ximo passo &gt;&gt;"/>
         <Property name="enabled" type="boolean" value="false"/>
-        <Property name="label" type="java.lang.String" value="Pr&#xf3;ximo passo &gt;&gt;"/>
+        <Property name="horizontalTextPosition" type="int" value="10"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnProxPercActionPerformed"/>
@@ -428,6 +432,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnVerificar">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/resources/img/icon-check1-24.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Verificar algoritmo"/>
       </Properties>
       <Events>
@@ -476,6 +483,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnSair">
       <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/resources/img/icon-exit-door-24.png"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Sair"/>
       </Properties>
       <Events>
